
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.phosae.kube_code_generator.example.apis.comic.v1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/phosae/kube-code-generator/example/apis/comic/v1";

// Hero represents a comic hero.
//
// +genclient
// +genclient:nonNamespaced
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
// +kubebuilder:subresource:status
// +kubebuilder:printcolumn:name="NAME",type="string",JSONPath=".spec.name"
// +kubebuilder:printcolumn:name="CITY",type="string",JSONPath=".spec.city"
// +kubebuilder:printcolumn:name="KIND",type="string",JSONPath=".spec.kind"
// +kubebuilder:printcolumn:name="AGE",type="date",JSONPath=".metadata.creationTimestamp"
// +kubebuilder:resource:singular=hero,path=heroes,shortName=he;sh,scope=Namespaced,categories=heroes;superheroes
message Hero {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional HeroSpec spec = 2;

  optional HeroStatus status = 3;
}

// HeroList is a list of Hero resources.
message HeroList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Hero items = 2;
}

// HeroSpec is the spec of a Hero.
message HeroSpec {
  // +kubebuilder:validation:Required
  // +kubebuilder:validation:MaxLength=128
  optional string name = 1;

  // +optional
  optional string city = 2;

  // +kubebuilder:validation:Required
  // +kubebuilder:validation:Enum=unknown;superhero;antihero;villain
  // +kubebuilder:default=unknown
  optional string kind = 3;

  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time birthDate = 4;

  // +listType=map
  // +optional
  repeated string superPowers = 5;
}

message HeroStatus {
  optional bool moving = 1;

  optional string currentCity = 2;
}

